Dark Mode Fixed

--- a/style.css
+++ b/style.css
@@ -337,6 +337,9 @@ body.dark-mode .blog-entry-title.entry-title a, body.dark-mode .blog-entry-readm
     font-size: 12px;
     line-height: 1.6;
 }
+.custom-menu-widget .oceanwp-custom-menu>ul>li{
+    border-bottom: 0 !important;
+}
 .footer-logo{
     margin-bottom: 20px;
 }
